--- a/TheEntertainer/appsettings.json
+++ b/TheEntertainer/appsettings.json
@@ -16,7 +16,7 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=tcp:banjotechdataservices.database.windows.net,1433;Initial Catalog=youjay_db;Persist Security Info=False;User ID=app_youjay;Password=Gb6;hdWyecPfp*vQ}YF5?<;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   },
-  "BaseUrl": "https://theentertainer20240921235229.azurewebsites.net",
+  "BaseUrl": "https://playasongtonight.com",
   "SpotifyClientId": "a86d0465487d4fa097d6ef58469912f7",
   "SpotifyClientSecret": "17e26469cbec428f8069a48e2ff354a7"
 }
