--- a/Entertainer.Services/BeatBallot.Services.csproj
+++ b/Entertainer.Services/BeatBallot.Services.csproj
@@ -13,7 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Entertainer.DataModels\Entertainer.Models.csproj" />
+    <ProjectReference Include="..\Entertainer.DataModels\BeatBallot.Models.csproj" />
   </ItemGroup>
 
 </Project>
