--- a/BeatBallot.Services/BeatBallot.Services.csproj
+++ b/BeatBallot.Services/BeatBallot.Services.csproj
@@ -13,7 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Entertainer.DataModels\BeatBallot.Models.csproj" />
+    <ProjectReference Include="..\BeatBallot.DataModels\BeatBallot.Models.csproj" />
   </ItemGroup>
 
 </Project>
