--- a/BeatBallot.Web/appsettings.json
+++ b/BeatBallot.Web/appsettings.json
@@ -17,6 +17,19 @@
     "DefaultConnection": "Server=tcp:banjotechdataservices.database.windows.net,1433;Initial Catalog=youjay_db;Persist Security Info=False;User ID=app_youjay;Password=Gb6;hdWyecPfp*vQ}YF5?<;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   },
   "BaseUrl": "https://playasongtonight.com",
-  "SpotifyClientId": "a86d0465487d4fa097d6ef58469912f7",
-  "SpotifyClientSecret": "17e26469cbec428f8069a48e2ff354a7"
+
+  "Spotify": {
+    "ClientId": "a86d0465487d4fa097d6ef58469912f7",
+    "ClientSecret": "17e26469cbec428f8069a48e2ff354a7",
+    "RedirectUri": "/authcallback",
+    "Scopes": [
+      "user-read-private",
+      "user-read-email",
+      "user-modify-playback-state",
+      "user-read-playback-state",
+      "user-read-currently-playing",
+      "playlist-read-private",
+      "playlist-modify-public"
+    ]
+  }
 }
